--- a/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/static/style.css
+++ b/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/static/style.css
@@ -1,5 +1,21 @@
 #main{
-    width: 500px;
+    width: 1200px;
     margin: 5px auto;
     text-align: center;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
