--- a/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/views/index.ejs
+++ b/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/views/index.ejs
@@ -26,7 +26,7 @@
         Description:
         <textarea name="description"  cols="30" rows="10"></textarea>
         <br><br>
-        Age:
+        Lifespan:
         <input type="text" name="age">
         <br>
         <input type="submit" value="Submit">
@@ -43,13 +43,13 @@
             </tr>
             <% for (var key of data) {%>
                 <tr>
-                    <td><%= key.group %></td>
-                    <td><a href="/info/<%=key._id%>"><%= key.name %></a></td>
+                     <td><%= key.group %></td>
+                    <td><a href="/info/<%= key._id %>/"><%= key.name %></a></td>
                     <td><%= key.lifespan %></td>
                     <td><%= key.description %></td>
                     <td><%= key.createdAt %></td>
                     <td><%= key.updatedAt %></td>
-                    <td><a href="/delete/<%=key._id%>">Delete</a> | <a href="/edit/<%=key._id%>">Edit</a></td>  
+                    <td><a href="/delete/<%= key._id %>/">Delete</a> | <a href="/edit/<%= key._id %>/">Edit</a></td>  
                 </tr> 
             <% } %>
           </table>
