--- a/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/views/index.ejs
+++ b/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Mongoose Dashboard</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
             <% for (var key of data) {%>
                 <tr>
                      <td><%= key.group %></td>
-                    <td><a href="/info/<%= key._id %>/"><%= key.name %></a></td>
+                    <td><a href="/info/<%= key._id %> /"><%= key.name %></a></td>
                     <td><%= key.lifespan %></td>
                     <td><%= key.description %></td>
                     <td><%= key.createdAt %></td>
